fix header z-index

--- a/src/css/header/nav-mobile.css
+++ b/src/css/header/nav-mobile.css
@@ -8,7 +8,7 @@
     position: sticky;
     top: 0;
     background: var(--white);
-    z-index: 1;
+    z-index: 5;
   }
 
   .nav-mobile {
